subscription_manager/static/styles/layout/_body.scss
body {
  display: flex;
  flex-direction: column;
  background-color: $white;
}

main {
  display: grid;
  box-sizing: border-box;
  min-height: calc(100vh - 150px);
  width: 100%;
  padding: 2rem 1rem;
  grid-template-columns: 1fr;
  align-content: center;

  .content {
    margin-top: 2rem;
  }
}

@media (min-width: $medium) {
  main {
    max-width: $large;
    margin: 0 auto;
    padding: 4rem 2rem;

    .container {
      grid-column-start: 1;
      grid-column-end: 3;
    }
  }
}

@media (min-width: $large) {
  main {
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 2rem;

    .container {
      grid-column-start: 1;
      grid-column-end: 2;
    }
  }
}

